Change type in my story

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 									<h2 class="major">My Story</h2>
 									<p>When I was 12, I immigrated to the United States, following my parents dream of becoming a medical professional. 
 										I didn't understand a lot of the cultural norms and the difference in my way of speech until I integrated into the U.S. school system.
-										Since i was very young, I've been a massive fan of Japanese culture and Anime, and I used that as a way to bridge the gap between me and my classmates. 
+										Since I was very young, I've been a massive fan of Japanese culture and Anime, and I used that as a way to bridge the gap between me and my classmates. 
 										I was bullied for being a nerd but that did not stop me. 
 										I became a leader of multiple organizations. I did well in school. I also decided to pave my own path, instead of living the Filipino nurse stereotype. </p>
 								</div>
