Add and remove comma

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 									<h1 class="major">Hello, my name is<br />
 									Rizza Carla <br />Modina Marzo</h1>
 									<p>I'm a first-generation Filipino immigrant, and first of my family to pursue an Engineering career. This portfolio will show you my journey as a 
-										<strong>Software Engineer</strong> but please connect with me on <strong><a href='https://www.linkedin.com/in/rizzamarzo/' target='blank'>LinkedIn</a></strong>! I'd rather chat or schedule a phone call with you, and get to know one another. Just leave a short message saying you found my portfolio!</p>
+										<strong>Software Engineer</strong>, but please connect with me on <strong><a href='https://www.linkedin.com/in/rizzamarzo/' target='blank'>LinkedIn</a></strong>! I'd rather chat or schedule a phone call with you and get to know one another. Just leave a short message saying you found my portfolio!</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
