--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>Rizza's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/webfonts/font-mfizz/font-mfizz.css">
+		<link rel="icon" href="images/logo.png" type="image/png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
-
+				
 				<!-- Wrapper -->
-					<div id="wrapper">
-
+				<div id="wrapper">
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
@@ -27,17 +28,27 @@
 									Rizza Carla <br />Modina Marzo</h1>
 									<p>I'm a first-generation Filipino immigrant, and first of my family to pursue an Engineering career. This portfolio will show you my journey as a 
 										<strong>Software Engineer</strong>, but please connect with me on <strong><a href='https://www.linkedin.com/in/rizzamarzo/' target='blank'>LinkedIn</a></strong>! I'd rather chat or schedule a phone call with you and get to know one another. Just leave a short message saying you found my portfolio!</p>
-									<ul class="actions">
-										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
-									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
+									<!-- Sidebar -->
+									<section class="panel" id="home">
+										<ul class="actions" id="sidebar">
+											<li><a href="#home" class="button primary color1 circle icon solid fas fa-home" title="Home">Home</a></li>
+											<li><a href="#story" class="button primary color1 circle icon solid fas fa-book-open" title="My Story">My Story</a>
+											</li>
+											<li><a href="#skills" class="button primary color1 circle icon solid fas fa-toolbox" title="Skills">Skills</a></li>
+											<li><a href="#profiles" class="button primary color1 circle icon solid far fa-id-card" title="Profiles">Profiles</a>
+											</li>
+											<li><a href="#projects" class="button primary color1 circle icon solid fas fa-project-diagram"
+													title="Projects">Projects</a></li>
+										</ul>
+									</section>
 									<img src="images/pic01.jpg" alt="" />
 								</div>
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
+							<section class="panel spotlight medium right" id="story">
 								<div class="content span-6">
 									<h2 class="major">My Story</h2>
 									<p>When I was 12, I immigrated to the United States, following my parents dream of becoming a medical professional. 
@@ -78,42 +89,103 @@
 							</section>
 
 						<!-- Panel -->
-							<section class="panel">
-								<section class="panel color2">
+							<section class="panel" id="skills">
+								<section class="panel large color2">
 									<div class="inner">
-										<h2 class="major">Projects</h2>
-										<ul class="grid-icons three connected">
-											<li><a href="https://satisfy-your-music-cravings.herokuapp.com/#/us" target='blank' title='Satisfy'><span class="icon solid fas fa-headphones"><span class="label">Satisfy</span></span></a></li>
-											<li><a href="https://melting-pot-mern.herokuapp.com/#/" target='blank'><span class="icon solid fas fa-utensils" title='Melting Pot'><span class="label">Melting Pot</span></span></a></li>
-											<li><a href="https://rizzacarla.github.io/Travel_Dreams/" target='blank'><span class="icon solid fas fa-plane" title='Travel Dreams'><span class="label">Travel Dreams</span></span></a></li>
+										<h2 class="major">Skills</h2>
+										<ul class="contact-icons color1">
+											<li class="icon brands fab fa-js-square"><span id='skills'>Javascript</span>&nbsp;&nbsp;&nbsp;</li>
+											<li class="icon brands fab fa-react"><span id='skills'>React</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+											<li class="icon solid far fa-atom"><span id='skills'>Redux</span>&nbsp;&nbsp;&nbsp;</li>
 										</ul>
-										<h2 class="major">Contact</h2>
+										<ul class="contact-icons color1">
+											<li class="fas fa-database"><span id='skills'>SQL</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+											<li class="fas fa-gem"><span id='skills'>Ruby</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+											<li class="icon solid far fa-gem"><span id='skills'>Ruby on Rails</span></li>
+										</ul>
+										<ul class="contact-icons color1">
+											<li class="icon brands fab fa-html5"><span id='skills'>HTML</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+											<li class="icon brands fab fa-css3-alt"><span id='skills'>CSS</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+											<li class="icon brands fab fa-node-js"><span id='skills'>Node.js</span></li>
+										</ul>
+									</div>
+									<div class="inner" id="profiles">
+										<h2 class="major">Profiles</h2>
 										<div class="span-1-7">
-											<ul class="contact-icons color1">
-												<li class="icon brands fa fa-linkedin"><a href="https://www.linkedin.com/in/rizzamarzo/" target='blank' title='LinkedIn'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-												<li class="icon brands fa fa-angellist"><a href="https://angel.co/u/rizza-carla-modina-marzo" target="blank"  title='AngelList'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-												<li class="icon brands fa fa-github"><a href="https://github.com/RizzaCarla" target='blank'  title='Github'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-												<li class="fa fa-envelope"><a href="mailto:rizzacarla.12@gmail.com" target='blank' title='Email'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+											<ul class="grid-icons three connected">
+												<li><a href="https://www.linkedin.com/in/rizzamarzo/" target='blank' title='LinkedIn'><span class="icon brands fa fa-linkedin"></span></a></li>
+												<li><a href="https://angel.co/u/rizza-carla-modina-marzo" target="blank" title='AngelList'><span class="icon brands fa fa-angellist"></span></a></li>
+												<li><a href="https://github.com/RizzaCarla" target='blank'  title='Github'><span class="icon brands fa fa-github"></span></a></li>
+											</ul>
+										</div>
+										<h2 class="major">Resume & Contact</h2>
+										<div class="span-1-7">
+											<ul class="grid-icons three connected">
+												<li><a href="assets/Resume - Rizza Marzo.pdf" target='blank' title='Resume'><span class="icon solid far fa-file"></span></a></li>
+												<li><a href="mailto:rizzacarla.12@gmail.com" target='blank' title='Email'><span class="icon solid fa fa-envelope"></span></a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<!-- <div class="gallery">
-									<div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+								<section class="panel xlarge color4-alt" id="projects">
+									<div class="inner">
+										<h2 class="major">Satisfy</h2>
+										<ul class="contact-icons color1">
+											<img class="project-image" src='./images/satisfy3.JPG'>
+											<li><a href="https://satisfy-your-music-cravings.herokuapp.com/#/us" target='blank' title='Satisfy'><span class="icon solid fas fa-headphones">&nbsp;&nbsp;&nbsp;</span>Live</a></li>
+											<li><a href="https://github.com/RizzaCarla/Satisfy" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+										</ul>
 									</div>
-									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
-									<div class="group span-4-5">
-										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+								<!-- </section>
+								<section class="panel medium color1-alt"> -->
+									<div class="inner">
+										<h2 class="major">Melting Pot</h2>
+										<ul class="contact-icons color1">
+											<img class="project-image" src='./images/MeltingPot2.JPG'>
+											<li><a href="https://melting-pot-mern.herokuapp.com/#/" target='blank'><span class="icon solid fas fa-utensils" title='Melting Pot'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
+											<li><a href="https://github.com/ChristopherJose707/Melting-Pot" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+										</ul>
 									</div>
-									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-								</div> -->
+								<!-- </section>
+								<section class="panel medium color4-alt"> -->
+									<div class="inner">
+										<h2 class="major">Travel Dreams</h2>
+										<ul class="contact-icons color1" id="link-options">
+											<img class="project-image" src='./images/TravelDreams.JPG'>
+											<li><a href="https://rizzacarla.github.io/Travel_Dreams/" target='blank'><span class="icon solid fas fa-plane" title='Travel Dreams'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
+											<li><a href="https://github.com/RizzaCarla/Travel_Dreams" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+										</ul>
+									</div>
+								</section>
 							</section>
+
+							<!-- Panel -->
+							<!-- <section class="panel">
+								<div class="gallery">
+									<div class="group span-3">
+										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img
+												src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img
+												src="images/gallery/thumbs/02.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img
+												src="images/gallery/thumbs/03.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img
+											src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<div class="group span-4-5">
+										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img
+												src="images/gallery/thumbs/05.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img
+												src="images/gallery/thumbs/06.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img
+												src="images/gallery/thumbs/07.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img
+												src="images/gallery/thumbs/08.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img
+											src="images/gallery/thumbs/09.jpg" alt="" /></a>
+								</div>
+							</section> -->
 
 						<!-- Panel -->
 							<!-- <section class="panel color4-alt">
@@ -435,7 +507,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 			<script>
 				var i = 0;
-				var txt = "I initially started self-learning, but I decided to apply to App Academy to test my luck. I joined their month-long prep course. Ater completing it, I got the opportunity to do a non - technical and technical interview. App Academy only lets about 5 % of their applicants join the program, and I was one of them! It was an intensive program, with a fast - paced learning approach and hands - on application, where I would spend 100 - 120 hours learning and coding weekly for four months.	After graduating, I now have multiple programming languages and technologies under my belt, and have made a few personal websites and webapps.";
+				var txt = "I initially started self-learning Python, but I decided to apply to App Academy to learn more computer science. I joined their month-long prep course. Ater completing it, I got the opportunity to do a non - technical and technical interview. App Academy only lets about 5 % of their applicants join the program, and I was one of them! It was an intensive program, with a fast - paced learning approach and hands - on application, where I would spend 100 - 120 hours learning and coding weekly for four months.	After graduating, I now have multiple programming languages and technologies under my belt, and have made a few personal websites and webapps.";
 				var speed = 50;
 
 				function typeWriter() {
