Change the story so it's not as corny

--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 								<div class="content span-6">
 									<h2 class="major">My Story</h2>
 									<p>When I was 12, I immigrated to the United States, following my parents dream of becoming a medical professional. 
-										I didn't understand a lot of the cultural norms and the difference in my way of speech until I integrated into the U.S. school system.
+										I didn't understand of a lot of the cultural norms and figurative speeches until I integrated into the U.S. school system.
 										Since I was very young, I've been a massive fan of Japanese culture and Anime, and I used that as a way to bridge the gap between me and my classmates. 
-										I was bullied for being a nerd but that did not stop me. 
-										I became a leader of multiple organizations. I did well in school. I also decided to pave my own path, instead of living the Filipino nurse stereotype. </p>
+										Instead of living the Filipino nurse stereotype, I decided to move to San Francisco to pursue a different path. 
+										I juggled school and work to pay for my rent, living expenses, and school tuition.
+										I became a leader of multiple organizations.
+										Most importantly, I received a B.A. in Psychology in just three and a half years.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -69,7 +71,7 @@
 										<h2 class="major">Along the way...</h2>
 										<div class="content span-3">
 											<p>As I steadily began to learn more about myself, I jumped around a lot between different career goals - from becoming a Pharmacist, to Psychologist, to Behavioral Analyst, and even as a Recruiter. 
-												I wasn't satisfied. I learned more about the Tech Industry and I pivoted one last time. 
+												I wasn't satisfied. After learning more about the Tech Industry, I pivoted one last time. 
 											</p>
 										</div>
 									</div>
@@ -507,7 +509,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 			<script>
 				var i = 0;
-				var txt = "I initially started self-learning Python, but I decided to apply to App Academy to learn more computer science. I joined their month-long prep course. Ater completing it, I got the opportunity to do a non - technical and technical interview. App Academy only lets about 5 % of their applicants join the program, and I was one of them! It was an intensive program, with a fast - paced learning approach and hands - on application, where I would spend 100 - 120 hours learning and coding weekly for four months.	After graduating, I now have multiple programming languages and technologies under my belt, and have made a few personal websites and webapps.";
+				var txt = "I initially started self-learning Python, but I decided to apply to App Academy to learn more computer science concepts. Ater completing their month-long prep course, I got the opportunity to do a non-technical and technical interview. App Academy only lets about 5 % of their applicants join the program, and I was one of them! It was an intensive program, with a fast-paced learning approach and hands-on application, where I would spend 100 - 120 hours learning and coding weekly for four months straight.	After graduating, I now have multiple programming languages and technologies under my belt, and I've made multiple websites and webapps. Feel free to check them out!";
 				var speed = 50;
 
 				function typeWriter() {
