--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/webfonts/font-mfizz/font-mfizz.css">
 		<link rel="icon" href="images/logo.png" type="image/png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -49,7 +48,7 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="story">
-								<div class="content span-6">
+								<div class="content span-6-75">
 									<h2 class="major">My Story</h2>
 									<p>When I was 12, I immigrated to the United States, following my parents dream of becoming a medical professional. 
 										I didn't understand of a lot of the cultural norms and figurative speeches until I integrated into the U.S. school system.
@@ -57,7 +56,7 @@
 										Instead of living the Filipino nurse stereotype, I decided to move to San Francisco to pursue a different path. 
 										I juggled school and work to pay for my rent, living expenses, and school tuition.
 										I became a leader of multiple organizations.
-										Most importantly, I received a B.A. in Psychology in just three and a half years.</p>
+										Most importantly, I received a B.A. in Psychology in just 3.5 years.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -80,7 +79,7 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left"  onMouseEnter="typeWriter()">
-								<div class="content span-5">
+								<div class="content span-5-5">
 									<h2 class="major">How did I end up coding?</h2>
 									<p id='typewritten-text'>
 									</p>
@@ -133,9 +132,11 @@
 									<div class="inner">
 										<h2 class="major">Satisfy</h2>
 										<ul class="contact-icons color1">
-											<img class="project-image" src='./images/satisfy3.JPG'>
-											<li><a href="https://satisfy-your-music-cravings.herokuapp.com/#/us" target='blank' title='Satisfy'><span class="icon solid fas fa-headphones">&nbsp;&nbsp;&nbsp;</span>Live</a></li>
-											<li><a href="https://github.com/RizzaCarla/Satisfy" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+											<a href='./images/satisfy3.JPG'><img class="project-image" src='./images/satisfy3.JPG'></a>
+											<div class="website-links">
+												<li><a href="https://satisfy-your-music-cravings.herokuapp.com/#/us" target='blank' title='Satisfy'><span class="icon solid fas fa-headphones">&nbsp;&nbsp;&nbsp;</span>Live</a></li>
+												<li><a href="https://github.com/RizzaCarla/Satisfy" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+											</div>
 										</ul>
 									</div>
 								<!-- </section>
@@ -143,9 +144,11 @@
 									<div class="inner">
 										<h2 class="major">Melting Pot</h2>
 										<ul class="contact-icons color1">
-											<img class="project-image" src='./images/MeltingPot2.JPG'>
-											<li><a href="https://melting-pot-mern.herokuapp.com/#/" target='blank'><span class="icon solid fas fa-utensils" title='Melting Pot'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
-											<li><a href="https://github.com/ChristopherJose707/Melting-Pot" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+											<a href='./images/MeltingPot2.JPG'><img class="project-image" src='./images/MeltingPot2.JPG'></a>
+											<div class="website-links">
+												<li><a href="https://melting-pot-mern.herokuapp.com/#/" target='blank'><span class="icon solid fas fa-utensils" title='Melting Pot'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
+												<li><a href="https://github.com/ChristopherJose707/Melting-Pot" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+											</div>
 										</ul>
 									</div>
 								<!-- </section>
@@ -153,9 +156,11 @@
 									<div class="inner">
 										<h2 class="major">Travel Dreams</h2>
 										<ul class="contact-icons color1" id="link-options">
-											<img class="project-image" src='./images/TravelDreams.JPG'>
-											<li><a href="https://rizzacarla.github.io/Travel_Dreams/" target='blank'><span class="icon solid fas fa-plane" title='Travel Dreams'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
-											<li><a href="https://github.com/RizzaCarla/Travel_Dreams" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+											<a href='./images/TravelDreams.JPG'><img class="project-image" src='./images/TravelDreams.JPG' /></a>
+											<div class="website-links">
+												<li><a href="https://rizzacarla.github.io/Travel_Dreams/" target='blank'><span class="icon solid fas fa-plane" title='Travel Dreams'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
+												<li><a href="https://github.com/RizzaCarla/Travel_Dreams" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
+											</div>
 										</ul>
 									</div>
 								</section>
@@ -496,7 +501,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section> -->
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Rizza Marzo. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
 
@@ -509,7 +514,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 			<script>
 				var i = 0;
-				var txt = "I initially started self-learning Python, but I decided to apply to App Academy to learn more computer science concepts. Ater completing their month-long prep course, I got the opportunity to do a non-technical and technical interview. App Academy only lets about 5 % of their applicants join the program, and I was one of them! It was an intensive program, with a fast-paced learning approach and hands-on application, where I would spend 100 - 120 hours learning and coding weekly for four months straight.	After graduating, I now have multiple programming languages and technologies under my belt, and I've made multiple websites and webapps. Feel free to check them out!";
+				var txt = "I initially started self-learning Python, but I decided to apply to App Academy to learn more computer science concepts. After completing their month-long prep course, I got the opportunity to do a non-technical and technical interview. App Academy only lets about 5 % of their applicants join the program, and I was one of them! It was an intensive program, with a fast-paced learning approach and hands-on application, where I would spend 100 - 120 hours learning and coding weekly for four months straight.	After graduating, I now have multiple programming languages and technologies under my belt, and I've made multiple websites and webapps. Feel free to check them out!";
 				var speed = 50;
 
 				function typeWriter() {
