Change melting pot link

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										<ul class="contact-icons color1">
 											<a href='./images/MeltingPot2.JPG'><img class="project-image" src='./images/MeltingPot2.JPG'></a>
 											<div class="website-links">
-												<li><a href="https://melting-pot-mern.herokuapp.com/#/" target='blank'><span class="icon solid fas fa-utensils" title='Melting Pot'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
+												<li><a href="https://melting-pot-2.herokuapp.com/#/" target='blank'><span class="icon solid fas fa-utensils" title='Melting Pot'>&nbsp;&nbsp;&nbsp;</span>Live</a></li>
 												<li><a href="https://github.com/ChristopherJose707/Melting-Pot" target='blank'><span	class="icon brands fa fa-github"  title='Github'>&nbsp;&nbsp;&nbsp;</span>Github</a></li>
 											</div>
 										</ul>
