remove story link

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 									<section class="panel" id="home">
 										<ul class="actions" id="sidebar">
 											<li><a href="#home" class="button primary color1 circle icon solid fas fa-home" title="Home">Home</a></li>
-											<li><a href="#story" class="button primary color1 circle icon solid fas fa-book-open" title="My Story">My Story</a>
-											</li>
+											<!-- <li><a href="#story" class="button primary color1 circle icon solid fas fa-book-open" title="My Story">My Story</a>
+											</li> -->
 											<li><a href="#skills" class="button primary color1 circle icon solid fas fa-toolbox" title="Skills">Skills</a></li>
 											<li><a href="#profiles" class="button primary color1 circle icon solid far fa-id-card" title="Profiles">Profiles</a>
 											</li>
